<resources>
    <string name="app_name">Instagram clone</string>
    <string name="app_logo_text_description">Instagram app logo text</string>
    <string name="create_new_account">Create new account</string>
    <string name="log_in">Log in</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="notification_listener_service">Test</string>
    <string name="loading">Loading</string>
    <string name="this_is_home_page">This is home page</string>
    <string name="Explore">Explore</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_fragment">Explore Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="upload_fragment">Upload Fragment</string>
    <string name="user_avatar">user avatar</string>
    <string name="username">username</string>
    <string name="user_post">user post</string>
</resources>